--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,21 +5,38 @@ error.message=First Name & Last Name is required!
 # ===============================
 # DATABASE
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/operator
-#spring.datasource.username=test
-#spring.datasource.password=test
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#============================
+# MariaDB
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/operator
+#spring.datasource.username=root
+#spring.datasource.password=root
 
-spring.h2.console.enabled=true
+
+#============================
+# MysqlDB
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.1.41:3310/operator
+spring.datasource.username=test
+spring.datasource.password=test
+
+
+
+
+# ================================
+# H2DB
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.h2.console.enabled=true
 # ===============================
 # JPA / HIBERNATE
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
