--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,8 @@ phases:
     commands:
       - echo Build started on `date`
       - mvn package
-      - echo Building the Docker image...          
+      - echo Building the Docker image...
+      - echo Current directory `ls -la`
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
